# mad-efficiency-factory

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  skills-lock.json
.claude/: settings.json
godot/: .gdlintrc  project.godot
scripts/: check_gdscript_types.py  (+3 more)
tools/orchestrator/: __init__.py  __main__.py  agent_runner.py  cli.py  config.py  human_input.py  output_parser.py  pipeline.py  plan_resolver.py  preflight.py  progress.py  pyproject.toml  response.py  server.py  session.py  spike.py  state.py  worktree.py
tools/orchestrator/pipelines/: implement.py  modify.py  modify_plan.py
tools/orchestrator/prompts/: impl-code.md  impl-commit.md  impl-push-pr.md  impl-spec-how.md  impl-spec-tasks.md  impl-spec-what.md  impl-steering-sync.md  impl-validate.md  modify-adr.md  modify-analyze.md  modify-cascade.md  modify-plan-edit.md  modify-plan-gen.md  modify-plan-investigate.md  modify-plan-review.md  modify-tasks.md  plan-edit.md  plan-gen.md  plan-readiness.md  test-fix.md
tools/orchestrator/runner/: __init__.py  claude_p.py  engine.py  executors.py  helpers.py  loader.py  modify_helpers.py  schema.py  template.py
tools/orchestrator/tests/: test_accept_adr.py  test_modify_plan_parser.py  test_output_parser.py  test_pipeline.py  test_plan_resolver.py  test_session_resume.py  test_state.py
tools/orchestrator/tests/test_runner/: test_claude_p.py  test_engine.py  test_helpers.py  test_implement_yaml.py  test_loader.py  test_modify_helpers.py  test_modify_yaml.py  test_schema.py  test_template.py
tools/orchestrator/workflows/: implement.yaml  modify.yaml
(+212 files in other folders)
